--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1 class="heading-primary">
           <span>Karthik Shetty</span>
         </h1>
-        <p>Problem Solver</p>
+        <p>Fresher</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
