--- a/index.html
+++ b/index.html
@@ -51,6 +51,36 @@
     <section class="work" id="work">
       <div class="row">
         <h2>My Work</h2>
+
+          <!-- Next Project -->
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Hackathon: Stock Market Project</h3>
+              <p>
+                Stock market Analyser for investors.
+              </p>
+              <ul class="work__list">
+                <li>Python</li>
+                <li>Streamlit</li>
+                <li>yfinance</li>
+                <li>bs4 [BeautifulSoup]</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://project-stock-market.onrender.com/" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="https://github.com/kart9071/project-stock_market.git" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/stock-market.png" class="work__image" alt="Project 1" height="400px" width="" />
+            </div>
+          </div>
+
+
         <div class="work__boxes">
           <div class="work__box">
             <div class="work__text">
@@ -78,6 +108,10 @@
               <img src="./images/KisanConnect.png" class="work__image" alt="Project 1" height="500px" />
             </div>
           </div>
+
+
+        
+          <!-- next projects -->
 
           <div class="work__box">
             <div class="work__text">
